--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+
+# User-specific files
+*.suo
+*.user
+*.sln.docstates
 *.cache
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+x64/*
+bld/
+[Bb]in/*
+[Oo]bj/
+
+# Roslyn cache directories
+*.ide/
